[package]
name = "seqmarked"
version = "0.1.1"
edition = "2024"
authors = [
    "Zhang Yanpo <drdr.xp@gmail.com>",
]
description = "Sequence-numbered values with tombstone support for LSM trees and versioned data."
license = "Apache-2.0"
repository = "https://github.com/drmingdrmer/seqmarked"
documentation = "https://docs.rs/seqmarked"

[dependencies]
serde             = { version = "1.0", features = ["derive"], optional = true }
bincode           = { version = "2.0.0-rc.3", features = ["serde"], optional = true }


[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"

[features]

default = []

seqmarked-serde = ["dep:serde"]
seqmarked-bincode = ["dep:bincode"]